1999-09-11  Jim Blandy  <jimb@savonarola.red-bean.com>

	* tests/strings.test: Add test for substring-move! argument checking.

	* lib.scm (signals-error?, signals-error?*): New macro and function.
	* tests/reader.test: Use them.

	* tests/interp.test: Add copyright notice.

	* tests/reader.test: New test file.

	* tests/regexp.test: New test file.

1999-09-06  Mikael Djurfeldt  <mdj@thalamus.nada.kth.se>

	* tests/interp.test: Added tests for evaluation of closure bodies.

1999-09-03  James Blandy  <jimb@mule.m17n.org>

	* tests/multilingual.nottest: New file, which we will turn into a
	test file once we actually have multilingual support to test.

	* tests/load.test: New test file.

1999-08-30  James Blandy  <jimb@mule.m17n.org>

	* tests/strings.test: New test file.

1999-08-29  Gary Houston  <ghouston@easynet.co.uk>

	* tests/ports.test: test unread-char and unread-string.

1999-08-19  Gary Houston  <ghouston@easynet.co.uk>

	* tests/ports.test: test line-buffering of fports.

1999-08-18  Gary Houston  <ghouston@easynet.co.uk>

	* tests/ports.test: tests for NUL and non-ASCII chars to fports.

1999-08-12  Gary Houston  <ghouston@easynet.co.uk>

	* tests/ports.test: lseek -> seek.

1999-08-04  Gary Houston  <ghouston@easynet.co.uk>

	* tests/ports.test: tests for buffered and unbuffered input/output
	fports with seeking.

1999-08-01  Jim Blandy  <jimb@savonarola.red-bean.com>

	* tests/r4rs.test (SECTION 3 4): Each element of type-matrix
	corresponds to an example object, not a predicate.  Aubrey
	probably never noticed this because SCM doesn't check the lengths
	of the arguments to for-each and map...

	* tests/ports.test: Add some regression tests for char-ready?.

1999-07-19  Jim Blandy  <jimb@savonarola.red-bean.com>

	* tests/ports.test: Fix copyright years.

	* tests/guardians.test: New test file.

	* tests/ports.test ("read-delimited!"): New tests.

1999-06-19  Jim Blandy  <jimb@savonarola.red-bean.com>

	* tests/interp.test: New file.
